k8s/services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: connect-scheduler-ingress
spec:
  backend:
    serviceName: connect-scheduler-frontend
    servicePort: 8080
